--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,9 +7,9 @@
 
 .container {
 	 margin: 0 auto;
-	 padding-left: 30px;
-	 padding-right: 30px;
-	 width: 960px;
+	 /* padding-left: 5px; */
+	 /* padding-right: 5px; */
+	 width: 100%;
 	 }
 
 	 /* typography */
@@ -77,9 +77,9 @@ h1, h3, h4, h5, p {
 
 	}
 
-.container, .grid {
-		padding-left: 30px;
-		padding-right: 30px;
+.grid {
+		/* padding-left: 5px; */
+		/* padding-right: 5px; */
 		width: 960px;
 		display: block;
 		margin: 0 auto;
@@ -92,7 +92,6 @@ body {
 		 color: #888;
 		 font: 300 16px/22px "lato" "Open Sans", "Helvetica Neue", Helvetica, 
 		 Arial, sans-serif;
-		 font-family: 'Lato', sans-serif;
 		 }
 
 h1, h2, h3, h4 {
@@ -153,6 +152,7 @@ a {
 		 padding-top: 70px;
 		 text-align: right;
 		 font-family: 'Lato', sans-serif;
+		
 	 }
 
 .primary-nav {
@@ -292,6 +292,8 @@ a {
  
  .lead {
 	text-align: center;
+	padding-left: 200px;
+	padding-right: 200px;
 	}
  .lead p {
 	 font-size: 21px;
